<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.taeconsultant.weekly_assignment.accountActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:background="@drawable/gradient_button_background"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <TextView
        android:id="@+id/email"
        android:layout_width="148dp"
        android:layout_height="25dp"
        android:text="Email Address"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.862"
        android:layout_marginTop="27dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="148dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="Create Password"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/email_txt"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="-8dp"
        app:layout_constraintLeft_toLeftOf="@+id/button" />

    <TextView
        android:id="@+id/repeat_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="Repeat password"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/pass_txt"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_button_background"
        android:onClick="onClick"
        android:textColor="@android:color/black"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <EditText
        android:id="@+id/pass_txt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:hint="Password"
        android:textColorHint="@color/bpLight_gray"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp" />

   <EditText
        android:id="@+id/rep_txt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        android:background="@android:color/white"
       android:textColor="@android:color/black"
        android:textSize="24sp"
       android:hint="Repeat Password"
       android:textColorHint="@color/bpLight_gray"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_pass"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/white"
        android:hint="Email"
        android:textColor="@android:color/black"
        android:textColorHint="@color/bpLight_gray"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/scr2_msg4"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/screen2_msg4"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scr2_msg2" />

    <TextView
        android:id="@+id/scr2_msg3"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/screen2_msg3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scr2_msg2" />

    <TextView
        android:id="@+id/scr2_msg2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/screen2_msg2"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sc2_msg1" />

    <TextView
        android:id="@+id/sc2_msg1"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="9dp"
        android:text="@string/screen2_msg1"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rep_txt" />

</android.support.constraint.ConstraintLayout>
